// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`LoginLayout Snapshots should match snapshot with complex children 1`] = `
<div
  class="flex-grow md:overflow-y-auto px-4 md:px-6 lg:px-8 py-6 lg:py-8"
>
  <div>
    Login Form
  </div>
  <button>
    Submit
  </button>
  <p>
    Footer text
  </p>
</div>
`;

exports[`LoginLayout Snapshots should match snapshot with simple children 1`] = `
<div
  class="flex-grow md:overflow-y-auto px-4 md:px-6 lg:px-8 py-6 lg:py-8"
>
  <div>
    Simple login content
  </div>
</div>
`;
